--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
 <body>
   {% include nav.html %}
   <main class="container">
-    {{ content }}
+    <article class="post-content">
+      {{ content }}
+    </article>
   </main>
   {% include footer.html %}
 </body>
