--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
       <article class="post-content">
         {{ content }}
       </article>
+      {% include giscus.html %}
     {% else %}
       {{ content }}
     {% endif %}
